1998-06-01  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* router/rfc822.c:
	    If the message had no 'From: ' header, generate one for it.

	* proto/cf/standard.cf:
	    Add "bitnet" and "uucp" into the default toplevels list.

	* proto/cf/rrouter.cf, proto/cf/i-bitnet.cf:
	    Updated BITNET routing rules;  nic.funet.fi  is Finland's
	    *only* BITNET host these days, and works as BITNET-bound
	    email gateway.

	* libsh/builtins.c, proto/cf/aliases.cf, proto/cf/aliases-new.cf:
	    Whoops, two mistakes in  aliases.cf -- wrong name at
	    lappend parameter, and lappend internal functionality
	    at empty target variable content was faulty (SIGSEGV..)

	* configure.in, libc/setregid.c, libc/Makefile.in,
	  transports/mailbox/mailbox.c:
	    Within mailbox.c there is one instance of fork(), and
	    following it are some setgid()/setuid() statements.
	    Setting real-uid/real-gid is not sufficient for systems
	    with NFS-mounted home directories...

	    Changed those calls to be  setregid() and setreuid(),
	    which should work far better, but I have no idea about
	    its portability to for example  SunOS 4.1.*  series.
	
	* proto/Makefile.in, proto/cf/SMTP.cf.in, configure.in:
	    Default router.cf is altered to have protocols 'routes',
	    and 'smtp'.  Per default the system install will not
	    have UUCP in routing stage anymore.

	* smtpserver/smtpdata.c:
	    Oops: At DATA processing the content-policy was tested
	    only if the last RCPT policy analysis yielded All-OK (0)
	    status.

1998-05-26  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* proto/newdb.in:
	    The script is in fact pure /bin/sh script, don't ask for
	    running the router on it.

	* proto/cf/aliases.cf, proto/cf/consist.cf, proto/cf/crossbar.cf,
	  proto/cf/aliases-new.cf:
	    Replaced all uses of 'setf' with  'lappend' and 'lreplace',
	    where appropriate.

1998-05-25  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* libsh/builtins.c:
	    Finetuning of  sh_lreplace()  gadget.
