@@ -15,9 +15,14 @@ if [ "x-u" = "x$1" ]; then
   LUOPT="-u"
   shift
 fi
+AOPT=""
+if [ "x-a" = "x$1" ]; then
+  AOPT="-a"
+  shift
+fi
 
 if [ -z "$1" ]; then
-  echo "newdb [-l|-u] dbfilenamebase [inputfile]"
+  echo "newdb [-l|-u] [-a] dbfilenamebase [inputfile]"
   exit 64
 fi
 
@@ -32,7 +37,7 @@ PATH=/bin:/usr/bin:$PATH # ZMailer router paths are a bit restrictive..
 
 trap "rm -f $BASENAME.$$*" 0
 
-$MAILBIN/makedb $LUOPT $DBTYPE $BASENAME.$$ < $BASENAME
+$MAILBIN/makedb $LUOPT $AOPT $DBTYPE $BASENAME.$$ < $BASENAME
 
 case $? in
 0)	;;
